playing around with pipes and CD

--- a/frontend/src/app/konnektor/konnektor-view.component.html
+++ b/frontend/src/app/konnektor/konnektor-view.component.html
@@ -4,6 +4,8 @@
 
 <ng-template #loaded>
 
+  <h4>Mai dátum:  {{maiDatum | puredatepipe}}</h4>
+
   <div  class="card mt-3">
     <div class="card-body">
       <h5 class="card-title">Using template reference to call method and property on the child component</h5>
