--- a/frontend/src/app/konnektor/auditlog-modal/auditlog-modal.component.html
+++ b/frontend/src/app/konnektor/auditlog-modal/auditlog-modal.component.html
@@ -1,7 +1,7 @@
 <div class="modal-header">
   <h4 class="modal-title">Auditlogs</h4>
 
-  <button type="button" class="btn-close" aria-label="Close" (click)="activeModal.dismiss('Cross click')"></button>
+  <button type="button" class="btn-close" aria-label="Close" (click)="activeModal.dismiss('Cross click')">gggggg</button>
 </div>
 
 <!--INLINE EDITING TABLE CELL FIELDS !! :)-->
