--- a/frontend/src/app/auditlog/auditlog.component.css
+++ b/frontend/src/app/auditlog/auditlog.component.css
@@ -34,6 +34,10 @@ button:hover {
   position: relative;
 }
 
+.fontuserItalic {
+  font-style: italic;
+}
+
 .fontuser i{
   position: absolute;
   left: 10px;
