--- a/frontend/src/app/ChangeDetectionTwo/cd2child1.component.html
+++ b/frontend/src/app/ChangeDetectionTwo/cd2child1.component.html
@@ -1,4 +1,14 @@
+
+<hr>
+<h3>Child 1 component</h3>
+<br>
 cd2child1.component: {{parentCounter}}
 <br>
+
+heavyCalculation: {{heavyCalculation()}}
+<br>
+
 <ng-content select="header"></ng-content>
 <ng-content select="footer"></ng-content>
+<div (click)="doNothing()">valami</div>
+<hr>
