- using common service for a lazy loaded child modue - using interceptor

--- a/frontend/src/app/ChangeDetection/cd.component.html
+++ b/frontend/src/app/ChangeDetection/cd.component.html
@@ -4,7 +4,7 @@ PARENT
 <br/>
 string interpolation with method expression: {{kiir()}}
 <br/>
-
+Common service property's value (used in child components: ): {{commonServiceProperty}}
 <!--
 <button title="click to change @Input on child wich detects changes with life cycle callback" (click)="changeSzamNameInputProperty()">changeSzamNameInputProperty</button>
 
