--- a/frontend/src/app/core/navigation.component.html
+++ b/frontend/src/app/core/navigation.component.html
@@ -15,7 +15,7 @@
         <a class="nav-link" routerLink="/navigation/cd">Change detection</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink="/navigation/cd2">Change detection two</a>
+        <a class="nav-link" [routerLink]="['/navigation/cd2', routeParamOne]">Change detection two</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="/navigation/onpush" tabindex="-1" aria-disabled="true">OnPush</a>
