- route service - behavior service

--- a/frontend/src/app/ChangeDetection/cd.component.html
+++ b/frontend/src/app/ChangeDetection/cd.component.html
@@ -4,7 +4,8 @@ PARENT
 <br/>
 string interpolation with method expression: {{kiir()}}
 <br/>
-Common service property's value (used in child components: ): {{commonServiceProperty}}
+routeCommonServiceProperty service property's value  {{routeCommonServiceProperty}} - <button (click)="incrementRouteCommonServiceProperty()">Increment it</button>
+<br>
 <!--
 <button title="click to change @Input on child wich detects changes with life cycle callback" (click)="changeSzamNameInputProperty()">changeSzamNameInputProperty</button>
 
