--- a/frontend/src/app/core/navigation.component.html
+++ b/frontend/src/app/core/navigation.component.html
@@ -21,7 +21,7 @@
         <a class="nav-link" href="/navigation/onpush" tabindex="-1" aria-disabled="true">OnPush</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+        <a class="nav-link" routerLink="/navigation/oderingform" tabindex="-1">Ordering Form Signals</a>
       </li>
     </ul>
     <form class="form-inline my-2 my-lg-0">
