to 17 and keyclaok latest

--- a/frontend/src/app/ChangeDetectionTwo/cd2.component.html
+++ b/frontend/src/app/ChangeDetectionTwo/cd2.component.html
@@ -1,7 +1,7 @@
 
 
 
-<button (click)="incrementProperty()">click on this div element will incerement a property on the component wich is an @Input on the child1, wich will trigger CD even if child is OnPush {{parentcounter.count}}</button>
+<button (click)="incrementProperty()">click on this div element will incerement a property on the component wich is an &#64;Input on the child1, wich will trigger CD even if child is OnPush {{parentcounter.count}}</button>
 <br>
 simpleParentProperty: {{simpleParentProperty}}
 <br>
