--- a/frontend/src/app/ChangeDetectionTwo/cd2child1.component.html
+++ b/frontend/src/app/ChangeDetectionTwo/cd2child1.component.html
@@ -4,7 +4,7 @@
 <br>
 
 <br>
-@Input értéke: {{parentCounter.count}}
+&#64;Input értéke: {{parentCounter.count}}
 heavyCalculation: {{heavyCalculation()}}
 <br>
 
