--- a/frontend/src/app/OrderingForm/orderingform.component.html
+++ b/frontend/src/app/OrderingForm/orderingform.component.html
@@ -7,42 +7,44 @@
 
       <div class="col-3">
         <b>Vehicle</b>
-        <ng-container *ngFor="let veh of vehicles">
-            <div> {{veh.brand}}</div>
-        </ng-container>
-        </div>
+        @for(veh of vehicles; track veh.brand) {
+          <div> {{veh.brand}}</div>
+        }
+    </div>
 
-      <div class="col-3">
-        <b>Price</b>
-        <ng-container *ngFor="let veh of vehicles">
-          <div> {{veh.price}}</div>
-        </ng-container>
-      </div>
+    <div class="col-3">
+      <b>Price</b>
+      @for (veh of vehicles; track veh) {
+        <div> {{veh.price}}</div>
+      }
+    </div>
 
-      <div class="col-2">
-        <b>Quantity</b>
-        <ng-container *ngFor="let veh of vehicles">
-          <div>
-            <select [(ngModel)]="selectedQuantity" style="width: 60px;" (change)="onChangeSelectedVehicle(veh)">
-              <option *ngFor="let quant of veh.quantity">
+    <div class="col-2">
+      <b>Quantity</b>
+      @for (veh of vehicles; track veh) {
+        <div>
+          <select [(ngModel)]="selectedQuantity" style="width: 60px;" (change)="onChangeSelectedVehicle(veh)">
+            @for (quant of veh.quantity; track quant) {
+              <option>
                 {{quant}}
               </option>
-            </select>
-          </div>
-        </ng-container>
-      </div>
+            }
+          </select>
+        </div>
+      }
+    </div>
 
-      <div class="col-2">
-        &nbsp;
-        <ng-container *ngFor="let veh of vehicles">
-          <div>  <button>delete</button></div>
-        </ng-container>
-
-      </div>
+    <div class="col-2">
+      &nbsp;
+      @for (veh of vehicles; track veh) {
+        <div>  <button>delete</button></div>
+      }
 
     </div>
 
-    <hr>
+  </div>
+
+  <hr>
 
     <div class="row border-1 border-black bg-body-secondary">
       <div class="col-3">
@@ -50,7 +52,7 @@
         <div>Delivery:</div>
         <div>Estimated Tax:</div>
         <div><b>Total:</b></div>
-       </div>
+      </div>
       <div class="col-3">
         <div>{{subTotal}}</div>
         <div>222</div>
