--- a/frontend/src/app/OrderingFormSignals/orderingsignal.component.html
+++ b/frontend/src/app/OrderingFormSignals/orderingsignal.component.html
@@ -7,36 +7,38 @@
 
       <div class="col-3">
         <b>Vehicle</b>
-        <ng-container *ngFor="let veh of vehicles">
+        @for (veh of vehicles; track veh) {
           <div> {{veh.brand}}</div>
-        </ng-container>
+        }
       </div>
 
       <div class="col-3">
         <b>Price</b>
-        <ng-container *ngFor="let veh of vehicles">
+        @for (veh of vehicles; track veh) {
           <div> {{veh.price}}</div>
-        </ng-container>
+        }
       </div>
 
       <div class="col-2">
         <b>Quantity</b>
-        <ng-container *ngFor="let veh of vehicles">
+        @for (veh of vehicles; track veh) {
           <div>
             <select [(ngModel)]="selectedQuantity" style="width: 60px;" (change)="onChangeSelectedVehicle(veh)">
-              <option *ngFor="let quant of veh.quantity">
-                {{quant}}
-              </option>
+              @for (quant of veh.quantity; track quant) {
+                <option>
+                  {{quant}}
+                </option>
+              }
             </select>
           </div>
-        </ng-container>
+        }
       </div>
 
       <div class="col-2">
         &nbsp;
-        <ng-container *ngFor="let veh of vehicles">
+        @for (veh of vehicles; track veh) {
           <div>  <button>delete</button></div>
-        </ng-container>
+        }
 
       </div>
 
@@ -44,27 +46,27 @@
 
     <hr>
 
-    <div class="row border-1 border-black bg-body-secondary">
-      <div class="col-3">
-        <div>Subtotal:</div>
-        <div>Delivery:</div>
-        <div>Estimated Tax:</div>
-        <div><b>Total:</b></div>
-      </div>
-      <div class="col-3">
-        <div>{{subTotal()}}</div>
-        <div>222</div>
-        <div>{{estimatedTax()}}</div>
-        <div>{{total()}}</div>
-      </div>
-      <div class="col-6">
-        <div><button (click)="multiplayBy10()">Multiplay Subtotal by 10</button></div>
-        <div>&nbsp;</div>
-        <div>&nbsp;</div>
-        <div>&nbsp;</div>
+      <div class="row border-1 border-black bg-body-secondary">
+        <div class="col-3">
+          <div>Subtotal:</div>
+          <div>Delivery:</div>
+          <div>Estimated Tax:</div>
+          <div><b>Total:</b></div>
+        </div>
+        <div class="col-3">
+          <div>{{subTotal()}}</div>
+          <div>222</div>
+          <div>{{estimatedTax()}}</div>
+          <div>{{total()}}</div>
+        </div>
+        <div class="col-6">
+          <div><button (click)="multiplayBy10()">Multiplay Subtotal by 10</button></div>
+          <div>&nbsp;</div>
+          <div>&nbsp;</div>
+          <div>&nbsp;</div>
+        </div>
+
       </div>
 
     </div>
-
   </div>
-</div>
