--- a/frontend/src/app/core/navigation.component.html
+++ b/frontend/src/app/core/navigation.component.html
@@ -26,6 +26,9 @@
       <li class="nav-item">
         <a class="nav-link" routerLink="/navigation/oderingsignals" tabindex="-1">Ordering Signals</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/navigation/playingdefer" tabindex="-1">Use defer</a>
+      </li>
     </ul>
     <form class="form-inline my-2 my-lg-0">
       <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
