--- a/frontend/src/app/konnektor/konnektor-view-child.component.html
+++ b/frontend/src/app/konnektor/konnektor-view-child.component.html
@@ -1,4 +1,4 @@
 
   <h5>#konnektorChild</h5>
-    counter: {{counter}}
+  <span data-testid="span-counter">counter: {{counter}}</span>
     counterWithViewChild: {{counterViewChild}}
