--- a/frontend/src/app/core/navigation.component.html
+++ b/frontend/src/app/core/navigation.component.html
@@ -6,7 +6,7 @@
     <a class="navbar-brand" href="#">Navigation:</a>
     <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
       <li class="nav-item active">
-        <a class="nav-link" routerLink="/navigation/konnektor-view">Konnektor view</a>
+        <a class="nav-link" routerLink="/navigation/konnektor-view" data-testid="navmenu-konnektor-view">Konnektor view</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" routerLink="/navigation/auditlog">Auditlog</a>
