--- a/frontend/src/app/ChangeDetectionTwo/cd2child1.component.html
+++ b/frontend/src/app/ChangeDetectionTwo/cd2child1.component.html
@@ -12,6 +12,6 @@ heavyCalculation: {{heavyCalculation()}}
 <ng-content select="footer"></ng-content>
 <button (click)="doNothing()">valami</button>
 <hr>
-
+<button (click)="valamitCsinalok()">Valamit csinálok</button>
 Nevem: {{nevem}}
 <cd2child11></cd2child11>
