--- a/frontend/src/app/konnektor/konnektor-view.component.html
+++ b/frontend/src/app/konnektor/konnektor-view.component.html
@@ -5,7 +5,6 @@
 loaded: {{loaded}}
 
 <h4>Mai dátum:  {{maiDatum | puredatepipe}}</h4>
-
 <div  class="card mt-3">
   <div class="card-body">
     <h5 class="card-title" data-testid="header-one">Using template reference to call method and property on the child component</h5>
@@ -39,6 +38,7 @@ loaded: {{loaded}}
   </div>
 </div>
 
+
 <div class="row mt-3">
   <div class="col">
     <div class="card">
@@ -70,6 +70,10 @@ loaded: {{loaded}}
             Clear
           </button>
         </form>
+
+        <br/>
+        <div>
+        </div>
 
       </div>
     </div>
