--- a/frontend/src/app/core/navigation.component.html
+++ b/frontend/src/app/core/navigation.component.html
@@ -6,28 +6,28 @@
     <a class="navbar-brand" href="#">Navigation:</a>
     <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
       <li class="nav-item active">
-        <a class="nav-link" routerLink="/navigation/konnektor-view" data-testid="navmenu-konnektor-view">Konnektor view</a>
+        <a class="nav-link" routerLink="/konnektor-view" data-testid="navmenu-konnektor-view">Konnektor view</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink="/navigation/auditlog">Auditlog</a>
+        <a class="nav-link" routerLink="/auditlog">Auditlog</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink="/navigation/cd">Change detection</a>
+        <a class="nav-link" routerLink="/cd">Change detection</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" [routerLink]="['/navigation/cd2', routeParamOne]">Change detection two</a>
+        <a class="nav-link" [routerLink]="['/cd2', routeParamOne]">Change detection two</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/navigation/onpush" tabindex="-1" aria-disabled="true">OnPush</a>
+        <a class="nav-link" routerLink="/onpush" tabindex="-1" aria-disabled="true">OnPush</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink="/navigation/oderingform" tabindex="-1">Ordering</a>
+        <a class="nav-link" routerLink="/oderingform" tabindex="-1">Ordering</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink="/navigation/oderingsignals" tabindex="-1">Ordering Signals</a>
+        <a class="nav-link" routerLink="/oderingsignals" tabindex="-1">Ordering Signals</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink="/navigation/playingdefer" tabindex="-1">Use defer</a>
+        <a class="nav-link" routerLink="/playingdefer" tabindex="-1">Use defer</a>
       </li>
     </ul>
     <form class="form-inline my-2 my-lg-0">
