--- a/frontend/src/app/core/navigation.component.html
+++ b/frontend/src/app/core/navigation.component.html
@@ -34,6 +34,7 @@
       <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
       <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
     </form>
+    <button (click)="playWithConcatMap()">concatMap</button>
     Datenaustausch zwischen navigation und CD2 Komponenten (keine Beziehung) mit Verwendung von BehaviorSubject: {{data}} und mit asnyc pipe: {{observableForAsyncPipe | async}}
   </div>
 </nav>
