--- a/frontend/src/app/ChangeDetection/cd.component.html
+++ b/frontend/src/app/ChangeDetection/cd.component.html
@@ -4,8 +4,11 @@ PARENT
 <br/>
 string interpolation with method expression: {{kiir()}}
 <br/>
+userarr:
+
+
 routeCommonServiceProperty service property's value  {{routeCommonServiceProperty}} - <button (click)="incrementRouteCommonServiceProperty()">Increment it</button>
 <br>
 
 <button (click)="clickToIcrementInputSzam()"> click to insrement szam input for the child</button>
-<cdchild [szam]="szam" #child></cdchild>
+<cdchild [szamInput]="szam" #child></cdchild>
