compose - nginx - frontend - backend OK

--- a/frontend/src/app/konnektor/konnektor-view.component.html
+++ b/frontend/src/app/konnektor/konnektor-view.component.html
@@ -17,8 +17,8 @@ loaded: {{loaded}}
 <h4>Mai dátum:  {{maiDatum | puredatepipe}}</h4>
 <div  class="card mt-3">
   <div class="card-body">
-    <h5 class="card-title" data-testid="header-one">Using template reference to call method and property on the child component</h5>
-    <div class="row border-1 border-black">
+    <h5 class="card-title" data-testid="header-one"></h5>
+    <div class="row border-1 border-black">fsdfdsf
       <div class="col-3">
         <button (click)="konnektorChild.increment()" data-testid="incrementOnChild">
           Methodenaufruf auf dem child componente mit temp ref variable</button>
